<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_integration</name>
  <version>0.0.0</version>
  <description>TODO: Action Integration</description>
  <maintainer email="dharan@todo.todo">dharan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>ros2_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ament_index_cpp</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>